// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Help snapshots — contract stability > help for ib auth login matches snapshot 1`] = `
"USAGE
  ib auth login [flags]

DESCRIPTION
  Open the system browser to authorize this CLI via OAuth 2.1 + PKCE and persist credentials to ~/.ibetoni/credentials.json (mode 0600).
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  --endpoint URL    API endpoint to authorize against (default: https://api.ibetoni.fi)

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  stderr: 'Logged in as <email> at <company>.'; credentials file written

ERRORS (stderr, exit non-zero)
  2  OAuth flow failed      → retry; check network / browser
  500  Backend error          → retry later

EXAMPLES
  ib auth login
  ib auth login --endpoint https://api-staging.ibetoni.fi
"
`;

exports[`Help snapshots — contract stability > help for ib auth logout matches snapshot 1`] = `
"USAGE
  ib auth logout [flags]

DESCRIPTION
  Revoke the refresh token server-side (best-effort) and delete the local credentials file.
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  (none)

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  no stdout output; exit 0 on success

ERRORS (stderr, exit non-zero)
  1  I/O error              → check file permissions

EXAMPLES
  ib auth logout
"
`;

exports[`Help snapshots — contract stability > help for ib auth refresh matches snapshot 1`] = `
"USAGE
  ib auth refresh [flags]

DESCRIPTION
  Manually refresh the JWT against /api/auth/refresh-token. Automatic refresh-on-401 also happens in the API client.
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  (none)

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  { ok: true }

ERRORS (stderr, exit non-zero)
  2  Refresh failed         → ib auth login to re-authenticate

EXAMPLES
  ib auth refresh
"
`;

exports[`Help snapshots — contract stability > help for ib auth switch matches snapshot 1`] = `
"USAGE
  ib auth switch [flags]

DESCRIPTION
  Switch the active company. Issues a new JWT bound to the target ownerAsiakasId and persists it.
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  --to NUMBER    Target asiakasId to switch to

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  { ok: true, activeCompany: { asiakasId, name } }

ERRORS (stderr, exit non-zero)
  2  Not logged in          → ib auth login
  403  No access to target    → verify ownership via \`ib company list\`

EXAMPLES
  ib auth switch --to 1349
"
`;

exports[`Help snapshots — contract stability > help for ib auth whoami matches snapshot 1`] = `
"USAGE
  ib auth whoami [flags]

DESCRIPTION
  Print the current authenticated user's personId, active company, and endpoint.
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  (none)

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  { personId, activeCompany: { asiakasId, name }, endpoint }

ERRORS (stderr, exit non-zero)
  2  Not logged in          → ib auth login first

EXAMPLES
  ib auth whoami
"
`;

exports[`Help snapshots — contract stability > help for ib company current matches snapshot 1`] = `
"USAGE
  ib company current [flags]

DESCRIPTION
  Return the record of the active company (the one bound to the current JWT).
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  (none)

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  { asiakasId, name }

ERRORS (stderr, exit non-zero)
  401  Token expired          → ib auth refresh
  500  Backend error          → retry with --verbose

EXAMPLES
  ib company current
"
`;

exports[`Help snapshots — contract stability > help for ib company list matches snapshot 1`] = `
"USAGE
  ib company list [flags]

DESCRIPTION
  List the companies the current user can act on, with the active one marked \`current: true\`.
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  (none)

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  ListEnvelope<{ asiakasId, name, current }> = { items, nextCursor, count }

ERRORS (stderr, exit non-zero)
  401  Token expired          → ib auth refresh
  500  Backend error          → retry with --verbose

EXAMPLES
  ib company list
  ib company list --pretty
"
`;

exports[`Help snapshots — contract stability > help for ib company switch matches snapshot 1`] = `
"USAGE
  ib company switch [flags]

DESCRIPTION
  Switch the active company. Alias of \`ib auth switch\`. Persists the rotated JWT.
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  --to NUMBER    Target asiakasId to switch to

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  { ok: true, activeCompany: { asiakasId, name } }

ERRORS (stderr, exit non-zero)
  403  No access to target    → verify via \`ib company list\`
  401  Token expired          → ib auth refresh
  500  Backend error          → retry with --verbose

EXAMPLES
  ib company switch --to 1349
"
`;

exports[`Help snapshots — contract stability > help for ib customer create matches snapshot 1`] = `
"USAGE
  ib customer create [flags]

DESCRIPTION
  Create a new customer via POST /api/asiakas/createY. Body forwarded verbatim.
  Permissions: requires auth.page.asiakas.edit.
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  --body JSON    JSON object with the new customer fields

WRITE-SAFETY FLAGS
  --dry-run            Validate without persisting. Returns the would-be response.
  --idempotency-key K  Replay protection. Cached for 24h.
  --reason TEXT        Free-text justification. Stored in audit log.

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  { asiakasId, ... } (raw backend response)

ERRORS (stderr, exit non-zero)
  400  Validation failed      → fix --body fields
  401  Token expired          → ib auth refresh
  403  Permission denied      → check auth.page.asiakas.edit
  500  Backend error          → retry with --verbose

EXAMPLES
  ib customer create --body '{"name":"Example Oy","yTunnus":"1234567-8"}' --idempotency-key new-example-oy
"
`;

exports[`Help snapshots — contract stability > help for ib customer delete matches snapshot 1`] = `
"USAGE
  ib customer delete [flags]

DESCRIPTION
  Delete a customer (asiakas). Requires --reason; --dry-run available.
  Permissions: requires auth.page.asiakas.edit.
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  --reason STRING    Audit-log reason (REQUIRED)

WRITE-SAFETY FLAGS
  --dry-run            Validate without persisting. Returns the would-be response.
  --idempotency-key K  Replay protection. Cached for 24h.
  --reason TEXT        Free-text justification. Stored in audit log.

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  { deleted: number } or { dryRun: true, wouldDelete: number }

ERRORS (stderr, exit non-zero)
  404  Customer not found     → verify asiakasId
  401  Token expired          → ib auth refresh
  403  Permission denied      → check auth.page.asiakas.edit
  500  Backend error          → retry with --verbose

EXAMPLES
  ib customer delete 9001 --reason "lifecycle cleanup"
"
`;

exports[`Help snapshots — contract stability > help for ib customer get matches snapshot 1`] = `
"USAGE
  ib customer get [flags]

DESCRIPTION
  Get a single customer (asiakas) by id with flat contact fields.
  Permissions: requires auth.page.asiakas.read.
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  --asiakasId NUMBER    Positional — asiakasId to fetch

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  { asiakasId, name, yTunnus, type, address, city, email, phone }

ERRORS (stderr, exit non-zero)
  404  Customer not found     → verify asiakasId
  401  Token expired          → ib auth refresh
  403  Permission denied      → check auth.page.asiakas.read
  500  Backend error          → retry with --verbose

EXAMPLES
  ib customer get 1349
"
`;

exports[`Help snapshots — contract stability > help for ib customer list matches snapshot 1`] = `
"USAGE
  ib customer list [flags]

DESCRIPTION
  List customers (asiakkaat) visible to the active company. ownerAsiakasId derived from JWT.
  Permissions: requires auth.page.asiakas.read.
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  --limit NUMBER    Max rows (capped at 500) (default: 100)
  --cursor STRING    Pagination cursor

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  ListEnvelope<{ asiakasId, name, yTunnus, type }>

ERRORS (stderr, exit non-zero)
  401  Token expired          → ib auth refresh
  403  Permission denied      → check auth.page.asiakas.read
  500  Backend error          → retry with --verbose

EXAMPLES
  ib customer list
  ib customer list --limit 50 --pretty
"
`;

exports[`Help snapshots — contract stability > help for ib customer modules matches snapshot 1`] = `
"USAGE
  ib customer modules [flags]

DESCRIPTION
  Report or toggle a customer's roolit + module flags. Field keys: pumppu (isPumppuToimittaja), jerry, henkilot, sijainnit, ajoneuvot, tiedostot, weather, lomaseuranta, shareorders. Without --set/--unset it is a read-only report (GET /api/cli/customer/modules/:asiakasId); with them it routes pumppu → POST /api/asiakas/setRoolit and modules → POST /api/asiakas/settings/save.
  Permissions: requires company admin on the target tenant (system admin = any tenant).
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  --asiakasId NUMBER    Positional — asiakasId to report/modify
  --set STRING    Comma-separated field keys to turn ON
  --unset STRING    Comma-separated field keys to turn OFF

WRITE-SAFETY FLAGS
  --dry-run            Validate without persisting. Returns the would-be response.
  --idempotency-key K  Replay protection. Cached for 24h.
  --reason TEXT        Free-text justification. Stored in audit log.

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  report: { asiakasId, roolit:{...}, modules:{...} } | write: { asiakasId, applied:{ set, unset, dryRun }, state:{ roolit, modules } }

ERRORS (stderr, exit non-zero)
  400  Unknown field key, or key in both --set and --unset → use only: pumppu/jerry/henkilot/sijainnit/ajoneuvot/tiedostot/weather/lomaseuranta/shareorders
  403  Not an admin of this tenant → use a system-admin token, or an admin of the owner company
  404  Customer not found     → verify asiakasId
  401  Token expired          → ib auth refresh
  500  Backend error          → retry with --verbose

EXAMPLES
  ib customer modules 1349
  ib customer modules 1349 --set jerry,weather,pumppu --reason 'enable operator features'
  ib customer modules 1349 --unset shareorders --dry-run
"
`;

exports[`Help snapshots — contract stability > help for ib customer operator matches snapshot 1`] = `
"USAGE
  ib customer operator [flags]

DESCRIPTION
  Verify or provision the full operator preset — all 9 operator flags at once (pumppu + the 8 modules). Default (no flag): verify, exit 0 iff every flag is on else exit 1 (CI-gateable). --set turns all 9 on; --reset turns all 9 off. System-admin can run cross-tenant.
  Permissions: requires company admin on the target tenant (system admin = any tenant).
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  --asiakasId NUMBER    Positional — asiakasId to verify/provision
  --set BOOLEAN    Turn ALL 9 operator flags ON
  --reset BOOLEAN    Turn ALL 9 operator flags OFF

WRITE-SAFETY FLAGS
  --dry-run            Validate without persisting. Returns the would-be response.
  --idempotency-key K  Replay protection. Cached for 24h.
  --reason TEXT        Free-text justification. Stored in audit log.

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  verify: { asiakasId, allSet, flags:{ pumppu, jerry, … }, missing:[…] } (exit 1 when allSet=false) | set/reset: { asiakasId, applied:{ set, unset, dryRun }, state }

ERRORS (stderr, exit non-zero)
  400  --set and --reset both given → pass at most one of --set / --reset
  403  Not an admin of this tenant → use a system-admin token, or an admin of the owner company
  404  Customer not found     → verify asiakasId
  401  Token expired          → ib auth refresh
  500  Backend error          → retry with --verbose

EXAMPLES
  ib customer operator 1349
  ib customer operator 1349 --set --reason 'onboard operator'
  ib customer operator 1349 --reset --reason 'offboard operator'
"
`;

exports[`Help snapshots — contract stability > help for ib customer person add matches snapshot 1`] = `
"USAGE
  ib customer person add [flags]

DESCRIPTION
  Attach a person to a customer (asiakasPerson). Requires --reason.
  Permissions: requires auth.page.asiakas.edit.
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  --asiakas NUMBER    Target asiakasId (REQUIRED)
  --person NUMBER    Target personId (REQUIRED)
  --contact-type NUMBER    contactPersonTypeId (1 = pumppari) (default: 1)
  --reason STRING    Audit-log reason (REQUIRED)

WRITE-SAFETY FLAGS
  --dry-run            Validate without persisting. Returns the would-be response.
  --idempotency-key K  Replay protection. Cached for 24h.
  --reason TEXT        Free-text justification. Stored in audit log.

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  { added: { asiakasId, personId } } or write-success envelope

ERRORS (stderr, exit non-zero)
  400  Company limit (26) reached → remove an existing link first
  401  Token expired          → ib auth refresh
  403  Permission denied      → check auth.page.asiakas.edit
  500  Backend error          → retry with --verbose

EXAMPLES
  ib customer person add --asiakas 26 --person 5351 --contact-type 1 --reason "onboard driver"
"
`;

exports[`Help snapshots — contract stability > help for ib customer person list matches snapshot 1`] = `
"USAGE
  ib customer person list [flags]

DESCRIPTION
  List persons attached to a customer. Optional --role filter.
  Permissions: requires auth.page.asiakas.read.
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  --role STRING    Filter by role name (e.g. keikkaHandler)

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  ListEnvelope<{ personId, name, email, role }>

ERRORS (stderr, exit non-zero)
  400  Unknown role name      → see ROLE_TYPEID_BY_NAME in @ibetoni/constants
  401  Token expired          → ib auth refresh
  403  Permission denied      → check auth.page.asiakas.read
  500  Backend error          → retry with --verbose

EXAMPLES
  ib customer person list 26
  ib customer person list 26 --role keikkaHandler
"
`;

exports[`Help snapshots — contract stability > help for ib customer person remove matches snapshot 1`] = `
"USAGE
  ib customer person remove [flags]

DESCRIPTION
  Detach a person from a customer (asiakasPerson). Requires --reason.
  Permissions: requires auth.page.asiakas.edit.
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  --asiakas NUMBER    Target asiakasId (REQUIRED)
  --person NUMBER    Target personId (REQUIRED)
  --contact-type NUMBER    contactPersonTypeId (default: 1)
  --reason STRING    Audit-log reason (REQUIRED)

WRITE-SAFETY FLAGS
  --dry-run            Validate without persisting. Returns the would-be response.
  --idempotency-key K  Replay protection. Cached for 24h.
  --reason TEXT        Free-text justification. Stored in audit log.

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  { removed: { asiakasId, personId } }

ERRORS (stderr, exit non-zero)
  404  Link not found         → verify asiakasId+personId combination
  401  Token expired          → ib auth refresh
  403  Permission denied      → check auth.page.asiakas.edit
  500  Backend error          → retry with --verbose

EXAMPLES
  ib customer person remove --asiakas 26 --person 5351 --reason "offboard driver"
"
`;

exports[`Help snapshots — contract stability > help for ib customer search matches snapshot 1`] = `
"USAGE
  ib customer search [flags]

DESCRIPTION
  Free-text search across customer names / yTunnus / contacts. GET /api/asiakas/search?searchString=...
  Permissions: requires auth.page.asiakas.read.
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  --query STRING    Positional — search string
  --limit NUMBER    Max results (default: 50)

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  ListEnvelope<{ asiakasId, name, yTunnus, score }>

ERRORS (stderr, exit non-zero)
  401  Token expired          → ib auth refresh
  403  Permission denied      → check auth.page.asiakas.read
  500  Backend error          → retry with --verbose

EXAMPLES
  ib customer search Example
  ib customer search 1234567
"
`;

exports[`Help snapshots — contract stability > help for ib customer update matches snapshot 1`] = `
"USAGE
  ib customer update [flags]

DESCRIPTION
  Update a customer via POST /api/asiakas/set/:asiakasId. Body forwarded verbatim.
  Permissions: requires auth.page.asiakas.edit.
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  --asiakasId NUMBER    Positional — asiakasId to update
  --body JSON    JSON object with the fields to update

WRITE-SAFETY FLAGS
  --dry-run            Validate without persisting. Returns the would-be response.
  --idempotency-key K  Replay protection. Cached for 24h.
  --reason TEXT        Free-text justification. Stored in audit log.

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  { ok: true, ... } (raw backend response)

ERRORS (stderr, exit non-zero)
  400  Validation failed      → fix --body fields
  404  Customer not found     → verify asiakasId
  401  Token expired          → ib auth refresh
  403  Permission denied      → check auth.page.asiakas.edit
  500  Backend error          → retry with --verbose

EXAMPLES
  ib customer update 1349 --body '{"email":"new@example.com"}' --reason 'customer requested'
"
`;

exports[`Help snapshots — contract stability > help for ib jerry admin detail matches snapshot 1`] = `
"USAGE
  ib jerry admin detail [flags]

DESCRIPTION
  Company Jerry drill-down: people by role (admins/tarjousAdmins/pumpparit), vehicles, and each sijainti's Jerry enrolment status (GET /api/admin/jerry-companies/:asiakasId/detail). System-admin only.
  Permissions: requires isSystemAdmin.
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  --asiakasId NUMBER    Positional — company asiakasId

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  { admins:[{personId,name}], tarjousAdmins:[…], pumpparit:[…], vehicles:[{vehicleId,vehicleRegNo}], sijainnit:[{sijaintiId,name,isJerry}] }

ERRORS (stderr, exit non-zero)
  400  Invalid asiakasId      → pass a numeric asiakasId
  403  Not a system admin     → use a system-admin token
  401  Token expired          → ib auth refresh
  500  Backend error          → retry with --verbose

EXAMPLES
  ib jerry admin detail 1402
"
`;

exports[`Help snapshots — contract stability > help for ib jerry admin disable matches snapshot 1`] = `
"USAGE
  ib jerry admin disable [flags]

DESCRIPTION
  Disable the BetoniJerry module for a company — clears BOTH isPumppuToimittaja and the HAS_JERRY setting (POST /api/admin/jerry-companies/:asiakasId/disable). System-admin only. Requires --reason.
  Permissions: requires isSystemAdmin.
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  --asiakasId NUMBER    Positional — company asiakasId
  --reason STRING    Audit-log reason (REQUIRED)

WRITE-SAFETY FLAGS
  --dry-run            Validate without persisting. Returns the would-be response.
  --idempotency-key K  Replay protection. Cached for 24h.
  --reason TEXT        Free-text justification. Stored in audit log.

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  { success: true } or { dryRun: true, wouldUpdate: { asiakasId, enable: false } }

ERRORS (stderr, exit non-zero)
  400  Invalid asiakasId      → pass a numeric asiakasId
  403  Not a system admin     → use a system-admin token
  404  Company not found      → verify asiakasId
  401  Token expired          → ib auth refresh
  500  Backend error          → retry with --verbose

EXAMPLES
  ib jerry admin disable 1402 --reason "offboard provider"
"
`;

exports[`Help snapshots — contract stability > help for ib jerry admin enable matches snapshot 1`] = `
"USAGE
  ib jerry admin enable [flags]

DESCRIPTION
  Enable the BetoniJerry module for a company — the audited toggle that sets BOTH isPumppuToimittaja and the HAS_JERRY setting (POST /api/admin/jerry-companies/:asiakasId/enable). Change-tracked via the asiakasSql proc paths. System-admin only. Requires --reason.
  Permissions: requires isSystemAdmin.
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  --asiakasId NUMBER    Positional — company asiakasId
  --reason STRING    Audit-log reason (REQUIRED)

WRITE-SAFETY FLAGS
  --dry-run            Validate without persisting. Returns the would-be response.
  --idempotency-key K  Replay protection. Cached for 24h.
  --reason TEXT        Free-text justification. Stored in audit log.

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  { success: true } or { dryRun: true, wouldUpdate: { asiakasId, enable: true } }

ERRORS (stderr, exit non-zero)
  400  Invalid asiakasId      → pass a numeric asiakasId
  403  Not a system admin     → use a system-admin token
  404  Company not found      → verify asiakasId
  401  Token expired          → ib auth refresh
  500  Backend error          → retry with --verbose

EXAMPLES
  ib jerry admin enable 1402 --reason "onboard provider"
  ib jerry admin enable 1402 --dry-run
"
`;

exports[`Help snapshots — contract stability > help for ib jerry admin list matches snapshot 1`] = `
"USAGE
  ib jerry admin list [flags]

DESCRIPTION
  List Jerry-active companies (isPumppuToimittaja + HAS_JERRY setting) with per-company counts (admins, tarjousAdmins, pumpparit, vehicles, Jerry/non-Jerry varikot). GET /api/admin/jerry-companies. System-admin only.
  Permissions: requires isSystemAdmin.
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  (none)

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  ListEnvelope<{ asiakasId, asiakasNimi, adminCount, tarjousAdminCount, pumppariCount, vehicleCount, sijaintiJerryCount, sijaintiNonJerryCount }>

ERRORS (stderr, exit non-zero)
  403  Not a system admin     → use a system-admin token
  401  Token expired          → ib auth refresh
  500  Backend error          → retry with --verbose

EXAMPLES
  ib jerry admin list
  ib jerry admin list --pretty
"
`;

exports[`Help snapshots — contract stability > help for ib jerry admin search matches snapshot 1`] = `
"USAGE
  ib jerry admin search [flags]

DESCRIPTION
  Search companies NOT yet fully Jerry-enabled, for the Add picker (GET /api/admin/jerry-companies/search?q=). Name LIKE match, min 2 chars, top 20. System-admin only.
  Permissions: requires isSystemAdmin.
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  --query STRING    Positional — name search (min 2 chars)

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  ListEnvelope<{ asiakasId, name }>

ERRORS (stderr, exit non-zero)
  403  Not a system admin     → use a system-admin token
  401  Token expired          → ib auth refresh
  500  Backend error          → retry with --verbose

EXAMPLES
  ib jerry admin search Betoni
"
`;

exports[`Help snapshots — contract stability > help for ib jerry check-address matches snapshot 1`] = `
"USAGE
  ib jerry check-address [flags]

DESCRIPTION
  Anonymous geofence feasibility probe (POST /api/pumppuRequests/checkAddress): which provider varikot cover an address. The single best tool for diagnosing 'no offers'. --address is required (the \`osoite\` body field); if --lat/--lng/--place-id are all supplied the server trusts them instead of re-geocoding. Not a mutation, so no write-safety flags. Rate-limited 10/min per IP. The \`providers\` array is only included when the token is a developer/admin.
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  --address STRING    Street address to check (REQUIRED; sent as \`osoite\`)
  --lat NUMBER    Latitude (trusted only with --lng + --place-id)
  --lng NUMBER    Longitude (trusted only with --lat + --place-id)
  --place-id STRING    Google placeId (lets the server trust client coords)
  --formatted-address STRING    Google formatted address

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  { geocoded: boolean, deliverable?: boolean, lat?, lng?, placeId?, formattedAddress?, providerCount?, nearestVarikkoKm?, providers?: [{ asiakasId, asiakasNimi, distanceKm }] }

ERRORS (stderr, exit non-zero)
  400  osoite missing         → pass --address
  429  Rate limit (10/min/IP) → wait and retry
  500  Backend error          → retry with --verbose

EXAMPLES
  ib jerry check-address --address 'Mannerheimintie 1, Helsinki'
  ib jerry check-address --address 'Hämeenkatu 1, Tampere' --lat 61.498 --lng 23.761 --place-id ChIJxxxx
"
`;

exports[`Help snapshots — contract stability > help for ib jerry counts matches snapshot 1`] = `
"USAGE
  ib jerry counts [flags]

DESCRIPTION
  Lifecycle counts. Default --mine returns the customer view (GET /api/pumppuRequests/mine/counts: draft/open/pending_verification/accepted/cancelled/expired/no_supply). --provider returns the provider badge counts (GET /api/pumppuRequests/provider-counts: avoimet/tarjotut/voitetut/voitetutActionRequired/paattyneet) and requires a provider company.
  Permissions: requires --provider: provider company (isPumppuToimittaja).
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  --provider BOOLEAN    Provider badge counts (provider role)
  --mine BOOLEAN    Customer counts (default)

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  --mine: { draft, open, pending_verification, accepted, cancelled, expired, no_supply } | --provider: { avoimet, tarjotut, voitetut, voitetutActionRequired, paattyneet }

ERRORS (stderr, exit non-zero)
  403  Not a provider (for --provider) → switch to a provider company, or use --mine
  401  Token expired          → ib auth refresh
  500  Backend error          → retry with --verbose

EXAMPLES
  ib jerry counts
  ib jerry counts --provider
"
`;

exports[`Help snapshots — contract stability > help for ib jerry provider-settings get matches snapshot 1`] = `
"USAGE
  ib jerry provider-settings get [flags]

DESCRIPTION
  Read a provider company's BetoniJerry settings — contact person, opening hours, company description, maintainsOrderInfo (GET /api/jerry-provider-settings). Defaults to the caller's own company; --asiakas targets another company you have edit rights on. Returns defaults when no row exists yet.
  Permissions: requires edit-tier on the target company (tarjousAdmin / company admin).
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  --asiakas NUMBER    Target company asiakasId (default: your own)

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  { asiakasId, jerryPersonId, jerryPersonName, jerryPersonPhone, openingHours, companyDescription, maintainsOrderInfo }

ERRORS (stderr, exit non-zero)
  403  No edit rights on company → use a tarjousAdmin/admin token for that company
  401  Token expired          → ib auth refresh
  500  Backend error          → retry with --verbose

EXAMPLES
  ib jerry provider-settings get
  ib jerry provider-settings get --asiakas 1402
"
`;

exports[`Help snapshots — contract stability > help for ib jerry provider-settings set matches snapshot 1`] = `
"USAGE
  ib jerry provider-settings set [flags]

DESCRIPTION
  Upsert a provider company's BetoniJerry settings (PUT /api/jerry-provider-settings). Partial-payload-safe: only the body keys present are written (omit a key to preserve it). jerryPersonId must belong to the target company. --asiakas targets another company. Requires --reason.
  Permissions: requires edit-tier on the target company (tarjousAdmin / company admin).
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  --body JSON    JSON: { jerryPersonId?, openingHours?, companyDescription?, maintainsOrderInfo? }
  --asiakas NUMBER    Target company asiakasId (default: your own)
  --reason STRING    Audit-log reason (REQUIRED)

WRITE-SAFETY FLAGS
  --dry-run            Validate without persisting. Returns the would-be response.
  --idempotency-key K  Replay protection. Cached for 24h.
  --reason TEXT        Free-text justification. Stored in audit log.

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  { asiakasId } or { dryRun: true, wouldUpdate: {...} }

ERRORS (stderr, exit non-zero)
  400  Invalid field / contact not in company → check jerryPersonId belongs to the company
  403  No edit rights on company → use a tarjousAdmin/admin token for that company
  401  Token expired          → ib auth refresh
  500  Backend error          → retry with --verbose

EXAMPLES
  ib jerry provider-settings set --body '{"openingHours":"ma-pe 7-16","maintainsOrderInfo":true}' --reason "update opening hours"
  ib jerry provider-settings set --body '{"jerryPersonId":6233}' --asiakas 1402 --reason "set contact"
"
`;

exports[`Help snapshots — contract stability > help for ib jerry request get matches snapshot 1`] = `
"USAGE
  ib jerry request get [flags]

DESCRIPTION
  Get one pump request. Default is the customer-owned recap (GET /api/pumppuRequests/:id, scoped to the caller's personId). --provider returns the provider-facing detail (GET /api/pumppuRequests/:id/provider-detail, requires provider role) including your own offer + attachments; customer PII (lat/lng/phone/email) stays masked until your offer is accepted/confirmed.
  Permissions: requires --provider: provider company (isPumppuToimittaja).
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  --requestId NUMBER    Positional — pumppuRequestId
  --provider BOOLEAN    Provider-facing detail view (provider role)

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  default: { pumppuRequestId, status, asiakasId, maaraM3, osoite, lat, lng, ... } | --provider: { request:{...}, ownOffer:{...}|null, ownAttachments:[…], requestAttachments:[…], messageThreadId }

ERRORS (stderr, exit non-zero)
  404  Request not found / not yours → verify requestId (and that you own it, or use --provider)
  403  Not a provider (for --provider) → switch to a provider company
  401  Token expired          → ib auth refresh
  500  Backend error          → retry with --verbose

EXAMPLES
  ib jerry request get 4012
  ib jerry request get 4012 --provider
"
`;

exports[`Help snapshots — contract stability > help for ib jerry request list matches snapshot 1`] = `
"USAGE
  ib jerry request list [flags]

DESCRIPTION
  List BetoniJerry pump requests (tarjouspyynnöt). Default --mine returns the caller's own requests (GET /api/pumppuRequests/mine). --open returns the provider inbox of open requests (GET /api/pumppuRequests/open) and requires a provider company (isPumppuToimittaja); customer PII is masked there until your offer is accepted. --status (CSV) and --limit apply to --mine only.
  Permissions: requires --open: provider company (isPumppuToimittaja).
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  --open BOOLEAN    Provider inbox of open requests (provider role)
  --mine BOOLEAN    Your own requests (default)
  --status STRING    Filter --mine by status (CSV: open,pending_verification,accepted,cancelled,expired,no_supply)
  --limit NUMBER    Max rows for --mine (server caps at 200) (default: 100)

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  ListEnvelope<{ pumppuRequestId, status, createdAt, sentAt?, osoite, formattedAddress, totalM3|maaraM3, ... }> (fields differ between --mine and --open; --open is PII-masked)

ERRORS (stderr, exit non-zero)
  403  Not a provider (for --open) → switch to a provider company, or use --mine
  401  Token expired          → ib auth refresh
  500  Backend error          → retry with --verbose

EXAMPLES
  ib jerry request list
  ib jerry request list --open
  ib jerry request list --mine --status open,accepted --limit 50
"
`;

exports[`Help snapshots — contract stability > help for ib jerry request offers matches snapshot 1`] = `
"USAGE
  ib jerry request offers [flags]

DESCRIPTION
  List the offers on a customer-owned request (GET /api/pumppuRequests/:id/offers). Drafts excluded; sorted pending-first then cheapest. Provider contact fields (jerryContactName/Phone, openingHours) are revealed only on the accepted offer.
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  --requestId NUMBER    Positional — pumppuRequestId you own

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  ListEnvelope<{ pumppuOfferId, status, priceCents, vatPercent, validUntil, asiakasNimi, ytunnus, providerDistanceKm, companyDescription, jerryContactName?, jerryContactPhone?, openingHours? }>

ERRORS (stderr, exit non-zero)
  404  Request not found / not yours → verify requestId
  401  Token expired          → ib auth refresh
  500  Backend error          → retry with --verbose

EXAMPLES
  ib jerry request offers 4012
  ib jerry request offers 4012 --pretty
"
`;

exports[`Help snapshots — contract stability > help for ib keikka create matches snapshot 1`] = `
"USAGE
  ib keikka create [flags]

DESCRIPTION
  Create a new keikka. The body is forwarded verbatim to POST /api/keikka/newKeikka — see the backend route for required fields.
  Permissions: requires auth.page.grid.tilaus.edit.
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  --body JSON    JSON object with the new keikka fields

WRITE-SAFETY FLAGS
  --dry-run            Validate without persisting. Returns the would-be response.
  --idempotency-key K  Replay protection. Cached for 24h.
  --reason TEXT        Free-text justification. Stored in audit log.

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  { keikkaId, ...echoed fields } (raw backend response)

ERRORS (stderr, exit non-zero)
  400  Validation failed      → fix --body fields
  401  Token expired          → ib auth refresh
  403  Permission denied      → check auth.page.grid.tilaus.edit
  500  Backend error          → retry with --verbose

EXAMPLES
  ib keikka create --body '{"asiakasId":1349,"pvm":"2026-06-01"}' --reason 'manual booking'
  ib keikka create --body '{...}' --dry-run
"
`;

exports[`Help snapshots — contract stability > help for ib keikka drivers assign matches snapshot 1`] = `
"USAGE
  ib keikka drivers assign [flags]

DESCRIPTION
  Assign the default driver to a keikka. POST /api/keikka/defaultDriver/assign/:keikkaId; driver is selected by the backend from JWT/keikka context.
  Permissions: requires auth.page.grid.tilaus.edit.
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  --keikkaId NUMBER    Positional — keikkaId to assign default driver to

WRITE-SAFETY FLAGS
  --dry-run            Validate without persisting. Returns the would-be response.
  --idempotency-key K  Replay protection. Cached for 24h.
  --reason TEXT        Free-text justification. Stored in audit log.

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  { ok: true, driver:{personId,name} } (raw backend response)

ERRORS (stderr, exit non-zero)
  404  Keikka not found       → verify keikkaId
  401  Token expired          → ib auth refresh
  403  Permission denied      → check auth.page.grid.tilaus.edit
  500  Backend error          → retry with --verbose

EXAMPLES
  ib keikka drivers assign 9001
  ib keikka drivers assign 9001 --dry-run
"
`;

exports[`Help snapshots — contract stability > help for ib keikka get matches snapshot 1`] = `
"USAGE
  ib keikka get [flags]

DESCRIPTION
  Get a single keikka by id with related customer / worksite / vehicle / driver projections.
  Permissions: requires auth.page.grid.tilaus.read.
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  --keikkaId NUMBER    Positional argument — the keikkaId to fetch

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  { keikkaId, pvm, time, customer:{asiakasId,name}, worksite:{tyomaaId,address}, vehicle:{vehicleId,plate}, driver:{personId,name}, m3, status }

ERRORS (stderr, exit non-zero)
  404  Keikka not found       → verify keikkaId
  401  Token expired          → ib auth refresh
  403  Permission denied      → check auth.page.grid.tilaus.read
  500  Backend error          → retry with --verbose

EXAMPLES
  ib keikka get 9001
"
`;

exports[`Help snapshots — contract stability > help for ib keikka list matches snapshot 1`] = `
"USAGE
  ib keikka list [flags]

DESCRIPTION
  List concrete delivery orders (keikkas) for the active company within a date range. Flat envelope optimised for AI/CI consumption.
  Permissions: requires auth.page.grid.tilaus.read.
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  --from DATE    Start date (YYYY-MM-DD or today/yesterday/tomorrow) (default: today)
  --to DATE    End date (YYYY-MM-DD or today/yesterday/tomorrow) (default: today)
  --customer NUMBER    Filter by asiakasId
  --vehicle NUMBER    Filter by vehicleId
  --worksite NUMBER    Filter by worksite (tyomaaId)
  --status STRING    Filter by tila/status
  --limit NUMBER    Max rows (server caps at 500) (default: 100)
  --cursor STRING    Pagination cursor

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  ListEnvelope<{ keikkaId, pvm, asiakasId, tyomaaId, vehicleId, tila, m3, time }>

ERRORS (stderr, exit non-zero)
  401  Token expired          → ib auth refresh
  403  Permission denied      → check auth.page.grid.tilaus.read
  500  Backend error          → retry with --verbose

EXAMPLES
  ib keikka list --from 2026-05-28 --to 2026-05-30
  ib keikka list --customer 1349 --status planned --limit 50
  ib keikka list --from today --to tomorrow --pretty
"
`;

exports[`Help snapshots — contract stability > help for ib keikka update matches snapshot 1`] = `
"USAGE
  ib keikka update [flags]

DESCRIPTION
  Update a keikka. v1.0 supports only \`--status\` (forwarded as \`tila\` to POST /api/keikka/setStatus). Other field-setters land in v1.1.
  Permissions: requires auth.page.grid.tilaus.edit.
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  --keikkaId NUMBER    Positional — keikkaId to update
  --status STRING    New tila/status value

WRITE-SAFETY FLAGS
  --dry-run            Validate without persisting. Returns the would-be response.
  --idempotency-key K  Replay protection. Cached for 24h.
  --reason TEXT        Free-text justification. Stored in audit log.

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  { ok: true } or backend response

ERRORS (stderr, exit non-zero)
  400  Validation failed      → check --status
  404  Keikka not found       → verify keikkaId
  401  Token expired          → ib auth refresh
  403  Permission denied      → check auth.page.grid.tilaus.edit
  500  Backend error          → retry with --verbose

EXAMPLES
  ib keikka update 9001 --status done
  ib keikka update 9001 --status confirmed --reason 'phone confirmation'
"
`;

exports[`Help snapshots — contract stability > help for ib person create matches snapshot 1`] = `
"USAGE
  ib person create [flags]

DESCRIPTION
  Create a person. Body REQUIRED via --body. Requires --reason.
  Permissions: requires auth.page.person.edit.
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  --body JSON    Person body. Must include personFirstName, personLastName, personEmail.
  --reason STRING    Audit-log reason (REQUIRED)

WRITE-SAFETY FLAGS
  --dry-run            Validate without persisting. Returns the would-be response.
  --idempotency-key K  Replay protection. Cached for 24h.
  --reason TEXT        Free-text justification. Stored in audit log.

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  { personId: number, ... } or { dryRun: true, wouldCreate: ... }

ERRORS (stderr, exit non-zero)
  400  Body missing required field → include personFirstName, personLastName, personEmail
  401  Token expired          → ib auth refresh
  403  Permission denied      → check auth.page.person.edit
  500  Backend error          → retry with --verbose

EXAMPLES
  ib person create --body '{"personFirstName":"Matti","personLastName":"M","personEmail":"m@x.com"}' --reason "onboard"
"
`;

exports[`Help snapshots — contract stability > help for ib person delete matches snapshot 1`] = `
"USAGE
  ib person delete [flags]

DESCRIPTION
  Delete a person. Requires --reason.
  Permissions: requires auth.page.person.edit.
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  --reason STRING    Audit-log reason (REQUIRED)

WRITE-SAFETY FLAGS
  --dry-run            Validate without persisting. Returns the would-be response.
  --idempotency-key K  Replay protection. Cached for 24h.
  --reason TEXT        Free-text justification. Stored in audit log.

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  { deleted: number }

ERRORS (stderr, exit non-zero)
  404  Person not found       → verify personId
  401  Token expired          → ib auth refresh
  403  Permission denied      → check auth.page.person.edit
  500  Backend error          → retry with --verbose

EXAMPLES
  ib person delete 5351 --reason "departed"
"
`;

exports[`Help snapshots — contract stability > help for ib person get matches snapshot 1`] = `
"USAGE
  ib person get [flags]

DESCRIPTION
  Get a single person by personId.
  Permissions: requires auth.page.person.read.
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  --personId NUMBER    Positional — personId to fetch

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  { personId, name, email, phone, roles:number[] }

ERRORS (stderr, exit non-zero)
  404  Person not found       → verify personId
  401  Token expired          → ib auth refresh
  403  Permission denied      → check auth.page.person.read
  500  Backend error          → retry with --verbose

EXAMPLES
  ib person get 6233
"
`;

exports[`Help snapshots — contract stability > help for ib person list matches snapshot 1`] = `
"USAGE
  ib person list [flags]

DESCRIPTION
  List persons (drivers, admins, etc.) visible to the active company. Optional --role uses ROLE_NAME_BY_TYPEID from @ibetoni/constants.
  Permissions: requires auth.page.person.read.
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  --role STRING    Filter by role name (e.g. driver, admin, laskuAdmin)
  --asiakas NUMBER    Filter by asiakasId membership
  --limit NUMBER    Max rows (capped at 500) (default: 100)

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  ListEnvelope<{ personId, name, email, roles:number[] }>

ERRORS (stderr, exit non-zero)
  400  Unknown role           → use a role from @ibetoni/constants ROLE_TYPEID_BY_NAME
  401  Token expired          → ib auth refresh
  403  Permission denied      → check auth.page.person.read
  500  Backend error          → retry with --verbose

EXAMPLES
  ib person list --role driver
  ib person list --asiakas 1349 --limit 50
"
`;

exports[`Help snapshots — contract stability > help for ib person search matches snapshot 1`] = `
"USAGE
  ib person search [flags]

DESCRIPTION
  Free-text search across person names / emails. POST /api/person/search.
  Permissions: requires auth.page.person.read.
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  --query STRING    Positional — search string
  --limit NUMBER    Max results (default: 50)

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  ListEnvelope<{ personId, name, email, score }>

ERRORS (stderr, exit non-zero)
  401  Token expired          → ib auth refresh
  403  Permission denied      → check auth.page.person.read
  500  Backend error          → retry with --verbose

EXAMPLES
  ib person search 'Matti'
"
`;

exports[`Help snapshots — contract stability > help for ib person update matches snapshot 1`] = `
"USAGE
  ib person update [flags]

DESCRIPTION
  Update a person. Body REQUIRED via --body. Requires --reason.
  Permissions: requires auth.page.person.edit.
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  --body JSON    Patch body (JSON)
  --reason STRING    Audit-log reason (REQUIRED)

WRITE-SAFETY FLAGS
  --dry-run            Validate without persisting. Returns the would-be response.
  --idempotency-key K  Replay protection. Cached for 24h.
  --reason TEXT        Free-text justification. Stored in audit log.

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  { ok: true, updated: { personId } }

ERRORS (stderr, exit non-zero)
  404  Person not found       → verify personId
  401  Token expired          → ib auth refresh
  403  Permission denied      → check auth.page.person.edit
  500  Backend error          → retry with --verbose

EXAMPLES
  ib person update 5351 --body '{"personPhone":"+358501234567"}' --reason "phone change"
"
`;

exports[`Help snapshots — contract stability > help for ib reference dump matches snapshot 1`] = `
"USAGE
  ib reference dump [flags]

DESCRIPTION
  Emit the full command surface as JSON (version, generatedAt, commands map). Read by AI assistants for one-shot CLI ingestion.
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  (none)

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  { version: string, generatedAt: ISO-8601, commands: { '<command>': CommandSpec } }

ERRORS (stderr, exit non-zero)
  1  I/O error              → retry; check stdout pipe

EXAMPLES
  ib reference dump
  ib reference dump | jq .version
"
`;

exports[`Help snapshots — contract stability > help for ib schedule day matches snapshot 1`] = `
"USAGE
  ib schedule day [flags]

DESCRIPTION
  List keikkas for a specific day.
  Permissions: requires auth.page.grid.tilaus.read.
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  --date DATE    Positional — date (YYYY-MM-DD or today/yesterday/tomorrow)

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  ListEnvelope<{ keikkaId, pvm, asiakasId, tyomaaId, vehicleId, tila, m3, time }>

ERRORS (stderr, exit non-zero)
  401  Token expired          → ib auth refresh
  403  Permission denied      → check auth.page.grid.tilaus.read
  500  Backend error          → retry with --verbose

EXAMPLES
  ib schedule day 2026-06-01
  ib schedule day tomorrow
"
`;

exports[`Help snapshots — contract stability > help for ib schedule today matches snapshot 1`] = `
"USAGE
  ib schedule today [flags]

DESCRIPTION
  List today's keikkas for the active company. Wrapper around \`ib keikka list --from today --to today\`.
  Permissions: requires auth.page.grid.tilaus.read.
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  (none)

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  ListEnvelope<{ keikkaId, pvm, asiakasId, tyomaaId, vehicleId, tila, m3, time }>

ERRORS (stderr, exit non-zero)
  401  Token expired          → ib auth refresh
  403  Permission denied      → check auth.page.grid.tilaus.read
  500  Backend error          → retry with --verbose

EXAMPLES
  ib schedule today
  ib schedule today --pretty
"
`;

exports[`Help snapshots — contract stability > help for ib schedule week matches snapshot 1`] = `
"USAGE
  ib schedule week [flags]

DESCRIPTION
  List keikkas for a 7-day window starting at the given date.
  Permissions: requires auth.page.grid.tilaus.read.
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  --start DATE    Positional — week start date (YYYY-MM-DD or today/yesterday/tomorrow)

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  ListEnvelope<{ keikkaId, pvm, asiakasId, tyomaaId, vehicleId, tila, m3, time }>

ERRORS (stderr, exit non-zero)
  401  Token expired          → ib auth refresh
  403  Permission denied      → check auth.page.grid.tilaus.read
  500  Backend error          → retry with --verbose

EXAMPLES
  ib schedule week 2026-06-01
  ib schedule week today
"
`;

exports[`Help snapshots — contract stability > help for ib schema dump matches snapshot 1`] = `
"USAGE
  ib schema dump [flags]

DESCRIPTION
  Structural map of the whole dbo schema — all tables with column names and types, FK edges, view names, and proc signatures. No proc/view bodies (use \`schema proc\`/\`schema view\` for those). Developer-only.
  Permissions: requires developer access (isSystemAdmin or isDeveloper).
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  (none)

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  { tables:[{name,columns}], foreignKeys:[{table,column,refTable,refColumn}], views:[{name}], procs:[{name,type,parameters}] }

ERRORS (stderr, exit non-zero)
  401  Token expired          → ib auth refresh
  403  Not a developer        → run \`ib auth whoami\`; if not a developer, \`ib auth login\` as a developer account (same person re-login won't grant it). Gate is server-side — a new DB flag only applies once --endpoint's backend is redeployed.
  500  Backend error          → retry with --verbose

EXAMPLES
  ib schema dump
"
`;

exports[`Help snapshots — contract stability > help for ib schema proc matches snapshot 1`] = `
"USAGE
  ib schema proc [flags]

DESCRIPTION
  Signature (parameters) and full definition (T-SQL) for one dbo proc/function. Developer-only.
  Permissions: requires developer access (isSystemAdmin or isDeveloper).
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  (none)

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  { name, type, parameters:[{name,dataType,mode}], definition:'<T-SQL>' }

ERRORS (stderr, exit non-zero)
  401  Token expired          → ib auth refresh
  403  Not a developer        → run \`ib auth whoami\`; if not a developer, \`ib auth login\` as a developer account (same person re-login won't grant it). Gate is server-side — a new DB flag only applies once --endpoint's backend is redeployed.
  500  Backend error          → retry with --verbose
  400  Invalid name (letters/digits/underscore only) → use the bare object name, no schema prefix
  404  Proc/function not found → check the name via \`ib schema procs\`

EXAMPLES
  ib schema proc asiakas_find
"
`;

exports[`Help snapshots — contract stability > help for ib schema procs matches snapshot 1`] = `
"USAGE
  ib schema procs [flags]

DESCRIPTION
  List dbo stored procedures and functions (P/FN/TF/IF). Developer-only.
  Permissions: requires developer access (isSystemAdmin or isDeveloper).
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  --search STRING    Filter object names by substring
  --limit NUMBER    Max rows (max 1000) (default: 200)

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  { items: [{ name, type:'P'|'FN'|'TF'|'IF' }], nextCursor: null, count }

ERRORS (stderr, exit non-zero)
  401  Token expired          → ib auth refresh
  403  Not a developer        → run \`ib auth whoami\`; if not a developer, \`ib auth login\` as a developer account (same person re-login won't grant it). Gate is server-side — a new DB flag only applies once --endpoint's backend is redeployed.
  500  Backend error          → retry with --verbose

EXAMPLES
  ib schema procs
  ib schema procs --search asiakas
"
`;

exports[`Help snapshots — contract stability > help for ib schema table matches snapshot 1`] = `
"USAGE
  ib schema table [flags]

DESCRIPTION
  Columns (type, nullability, default, key), primary key, foreign keys, and indexes for one dbo table. Developer-only.
  Permissions: requires developer access (isSystemAdmin or isDeveloper).
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  (none)

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  { name, columns:[{name,dataType,maxLength,nullable,default,key}], primaryKey:[…], foreignKeys:[{column,refTable,refColumn}], indexes:[{name,columns,unique}] }

ERRORS (stderr, exit non-zero)
  401  Token expired          → ib auth refresh
  403  Not a developer        → run \`ib auth whoami\`; if not a developer, \`ib auth login\` as a developer account (same person re-login won't grant it). Gate is server-side — a new DB flag only applies once --endpoint's backend is redeployed.
  500  Backend error          → retry with --verbose
  400  Invalid name (letters/digits/underscore only) → use the bare object name, no schema prefix
  404  Table not found        → check the name via \`ib schema tables\`

EXAMPLES
  ib schema table keikka
"
`;

exports[`Help snapshots — contract stability > help for ib schema tables matches snapshot 1`] = `
"USAGE
  ib schema tables [flags]

DESCRIPTION
  List dbo base tables with column counts. Developer-only.
  Permissions: requires developer access (isSystemAdmin or isDeveloper).
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  --search STRING    Filter object names by substring
  --limit NUMBER    Max rows (max 1000) (default: 200)

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  { items: [{ name, type:'table', columnCount }], nextCursor: null, count }

ERRORS (stderr, exit non-zero)
  401  Token expired          → ib auth refresh
  403  Not a developer        → run \`ib auth whoami\`; if not a developer, \`ib auth login\` as a developer account (same person re-login won't grant it). Gate is server-side — a new DB flag only applies once --endpoint's backend is redeployed.
  500  Backend error          → retry with --verbose

EXAMPLES
  ib schema tables
  ib schema tables --search keikka
"
`;

exports[`Help snapshots — contract stability > help for ib schema view matches snapshot 1`] = `
"USAGE
  ib schema view [flags]

DESCRIPTION
  Columns and full definition (T-SQL) for one dbo view. Developer-only.
  Permissions: requires developer access (isSystemAdmin or isDeveloper).
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  (none)

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  { name, columns:[{name,dataType,maxLength,nullable,default,key}], definition:'<T-SQL>' }

ERRORS (stderr, exit non-zero)
  401  Token expired          → ib auth refresh
  403  Not a developer        → run \`ib auth whoami\`; if not a developer, \`ib auth login\` as a developer account (same person re-login won't grant it). Gate is server-side — a new DB flag only applies once --endpoint's backend is redeployed.
  500  Backend error          → retry with --verbose
  400  Invalid name (letters/digits/underscore only) → use the bare object name, no schema prefix
  404  View not found         → check the name via \`ib schema views\`

EXAMPLES
  ib schema view keikkaBetoniView
"
`;

exports[`Help snapshots — contract stability > help for ib schema views matches snapshot 1`] = `
"USAGE
  ib schema views [flags]

DESCRIPTION
  List dbo views with column counts. Developer-only.
  Permissions: requires developer access (isSystemAdmin or isDeveloper).
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  --search STRING    Filter object names by substring
  --limit NUMBER    Max rows (max 1000) (default: 200)

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  { items: [{ name, type:'view', columnCount }], nextCursor: null, count }

ERRORS (stderr, exit non-zero)
  401  Token expired          → ib auth refresh
  403  Not a developer        → run \`ib auth whoami\`; if not a developer, \`ib auth login\` as a developer account (same person re-login won't grant it). Gate is server-side — a new DB flag only applies once --endpoint's backend is redeployed.
  500  Backend error          → retry with --verbose

EXAMPLES
  ib schema views
"
`;

exports[`Help snapshots — contract stability > help for ib sijainti create matches snapshot 1`] = `
"USAGE
  ib sijainti create [flags]

DESCRIPTION
  Create a new sijainti via POST /api/geocode/sijainti/add. Body forwarded verbatim.
  Permissions: requires auth.page.sijainnit.edit.
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  --body JSON    JSON object with the new sijainti fields

WRITE-SAFETY FLAGS
  --dry-run            Validate without persisting. Returns the would-be response.
  --idempotency-key K  Replay protection. Cached for 24h.
  --reason TEXT        Free-text justification. Stored in audit log.

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  { sijaintiId, ... } (raw backend response)

ERRORS (stderr, exit non-zero)
  400  Validation failed      → fix --body fields
  401  Token expired          → ib auth refresh
  403  Permission denied      → check auth.page.sijainnit.edit
  500  Backend error          → retry with --verbose

EXAMPLES
  ib sijainti create --body '{"name":"Depot A","address":"Industrial St 1","sijaintiTypeId":1}'
"
`;

exports[`Help snapshots — contract stability > help for ib sijainti get matches snapshot 1`] = `
"USAGE
  ib sijainti get [flags]

DESCRIPTION
  Get a single sijainti by id.
  Permissions: requires auth.page.sijainnit.read.
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  --sijaintiId NUMBER    Positional — sijaintiId to fetch

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  { sijaintiId, name, address, coords:{lat,lng}, type, jerryActiveUntil, ... } (raw row)

ERRORS (stderr, exit non-zero)
  404  Sijainti not found     → verify sijaintiId
  401  Token expired          → ib auth refresh
  403  Permission denied      → check auth.page.sijainnit.read
  500  Backend error          → retry with --verbose

EXAMPLES
  ib sijainti get 42
"
`;

exports[`Help snapshots — contract stability > help for ib sijainti list matches snapshot 1`] = `
"USAGE
  ib sijainti list [flags]

DESCRIPTION
  List geocoded locations (sijainnit) — depots, plants, customer destinations. Optional --type filters by sijaintiTypeId.
  Permissions: requires auth.page.sijainnit.read.
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  --type NUMBER    Filter by sijaintiTypeId
  --limit NUMBER    Max rows (capped at 500) (default: 100)

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  ListEnvelope<{ sijaintiId, name, address, coords:{lat,lng}, type, jerryActiveUntil }>

ERRORS (stderr, exit non-zero)
  401  Token expired          → ib auth refresh
  403  Permission denied      → check auth.page.sijainnit.read
  500  Backend error          → retry with --verbose

EXAMPLES
  ib sijainti list
  ib sijainti list --type 1
"
`;

exports[`Help snapshots — contract stability > help for ib sijainti set-jerry matches snapshot 1`] = `
"USAGE
  ib sijainti set-jerry [flags]

DESCRIPTION
  Enrol or unenrol a varikko (location) in BetoniJerry by setting sijainti.jerryActiveUntil. --on writes the permanent sentinel (the varikko then receives BetoniJerry pump requests covering its delivery radius); --off clears it to null. Replicates the EditSijainti toggle: reads the row, overrides jerryActiveUntil, and writes it back via POST /api/geocode/updateSijainti (lat/lng and other fields are preserved). Visibility in matching still requires the company's isPumppuToimittaja flag.
  Permissions: requires auth.page.sijainnit.edit.
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  --sijaintiId NUMBER    Positional — sijaintiId to toggle
  --on BOOLEAN    Enrol (jerryActiveUntil = sentinel)
  --off BOOLEAN    Unenrol (jerryActiveUntil = null)

WRITE-SAFETY FLAGS
  --dry-run            Validate without persisting. Returns the would-be response.
  --idempotency-key K  Replay protection. Cached for 24h.
  --reason TEXT        Free-text justification. Stored in audit log.

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  { ok: true, ... } (raw backend response) or { dryRun: true, wouldUpdate: {...} }

ERRORS (stderr, exit non-zero)
  400  Neither/both of --on/--off given → pass exactly one of --on / --off
  404  Sijainti not found     → verify sijaintiId
  401  Token expired          → ib auth refresh
  403  Permission denied      → check auth.page.sijainnit.edit
  500  Backend error          → retry with --verbose

EXAMPLES
  ib sijainti set-jerry 42 --on --reason 'pilot varikko in Jerry'
  ib sijainti set-jerry 42 --off --reason 'seasonal pause'
  ib sijainti set-jerry 42 --on --dry-run
"
`;

exports[`Help snapshots — contract stability > help for ib sijainti update matches snapshot 1`] = `
"USAGE
  ib sijainti update [flags]

DESCRIPTION
  Update a sijainti via POST /api/geocode/updateSijainti. Body forwarded verbatim.
  Permissions: requires auth.page.sijainnit.edit.
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  --body JSON    JSON object with the fields to update (must include sijaintiId)

WRITE-SAFETY FLAGS
  --dry-run            Validate without persisting. Returns the would-be response.
  --idempotency-key K  Replay protection. Cached for 24h.
  --reason TEXT        Free-text justification. Stored in audit log.

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  { ok: true, ... } (raw backend response)

ERRORS (stderr, exit non-zero)
  400  Validation failed      → fix --body fields
  404  Sijainti not found     → verify sijaintiId
  401  Token expired          → ib auth refresh
  403  Permission denied      → check auth.page.sijainnit.edit
  500  Backend error          → retry with --verbose

EXAMPLES
  ib sijainti update --body '{"sijaintiId":42,"name":"Renamed depot"}'
"
`;

exports[`Help snapshots — contract stability > help for ib vehicle drivers matches snapshot 1`] = `
"USAGE
  ib vehicle drivers [flags]

DESCRIPTION
  Driver assignment history for a vehicle within a date range.
  Permissions: requires auth.page.vehicle.read.
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  --vehicleId NUMBER    Positional — vehicleId to inspect
  --from DATE    Start date (YYYY-MM-DD or today/yesterday/tomorrow) (default: today)
  --to DATE    End date (YYYY-MM-DD or today/yesterday/tomorrow) (default: today)

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  ListEnvelope<{ pvm, driverId, driverName, shiftStart, shiftEnd }>

ERRORS (stderr, exit non-zero)
  404  Vehicle not found      → verify vehicleId
  401  Token expired          → ib auth refresh
  403  Permission denied      → check auth.page.vehicle.read
  500  Backend error          → retry with --verbose

EXAMPLES
  ib vehicle drivers 7 --from 2026-05-01 --to 2026-05-31
"
`;

exports[`Help snapshots — contract stability > help for ib vehicle get matches snapshot 1`] = `
"USAGE
  ib vehicle get [flags]

DESCRIPTION
  Get a single vehicle by id.
  Permissions: requires auth.page.vehicle.read.
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  --vehicleId NUMBER    Positional — vehicleId to fetch

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  { vehicleId, plate, type, capacity }

ERRORS (stderr, exit non-zero)
  404  Vehicle not found      → verify vehicleId
  401  Token expired          → ib auth refresh
  403  Permission denied      → check auth.page.vehicle.read
  500  Backend error          → retry with --verbose

EXAMPLES
  ib vehicle get 7
"
`;

exports[`Help snapshots — contract stability > help for ib vehicle list matches snapshot 1`] = `
"USAGE
  ib vehicle list [flags]

DESCRIPTION
  List vehicles visible to the active company. ownerAsiakasId derived from JWT.
  Permissions: requires auth.page.vehicle.read.
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  --limit NUMBER    Max rows (capped at 500) (default: 100)

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  ListEnvelope<{ vehicleId, plate, type, capacity }>

ERRORS (stderr, exit non-zero)
  401  Token expired          → ib auth refresh
  403  Permission denied      → check auth.page.vehicle.read
  500  Backend error          → retry with --verbose

EXAMPLES
  ib vehicle list
  ib vehicle list --pretty
"
`;

exports[`Help snapshots — contract stability > help for ib vehicle status matches snapshot 1`] = `
"USAGE
  ib vehicle status [flags]

DESCRIPTION
  Current operational status for a vehicle: current driver, current keikka, latest GPS ping (via Ecofleet, best-effort).
  Permissions: requires auth.page.vehicle.read.
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  --vehicleId NUMBER    Positional — vehicleId to inspect

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  { vehicleId, plate, currentDriver:{personId,name}|null, currentKeikka:{keikkaId,tila}|null, lastGpsPing:{lat,lng,at}|null }

ERRORS (stderr, exit non-zero)
  404  Vehicle not found      → verify vehicleId
  401  Token expired          → ib auth refresh
  403  Permission denied      → check auth.page.vehicle.read
  500  Backend error          → retry with --verbose

EXAMPLES
  ib vehicle status 7
  ib vehicle status 7 --pretty
"
`;

exports[`Help snapshots — contract stability > help for ib worksite create matches snapshot 1`] = `
"USAGE
  ib worksite create [flags]

DESCRIPTION
  Create a new worksite via POST /api/tyomaa/new. Body forwarded verbatim.
  Permissions: requires auth.page.tyomaa.edit.
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  --body JSON    JSON object with the new tyomaa fields

WRITE-SAFETY FLAGS
  --dry-run            Validate without persisting. Returns the would-be response.
  --idempotency-key K  Replay protection. Cached for 24h.
  --reason TEXT        Free-text justification. Stored in audit log.

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  { tyomaaId, ... } (raw backend response)

ERRORS (stderr, exit non-zero)
  400  Validation failed      → fix --body fields
  401  Token expired          → ib auth refresh
  403  Permission denied      → check auth.page.tyomaa.edit
  500  Backend error          → retry with --verbose

EXAMPLES
  ib worksite create --body '{"name":"Site A","address":"Main St 1","asiakasId":1349}'
"
`;

exports[`Help snapshots — contract stability > help for ib worksite dates expiring matches snapshot 1`] = `
"USAGE
  ib worksite dates expiring [flags]

DESCRIPTION
  Company-wide worksite dates expiring within --days (default 30).
  Permissions: requires auth.page.tyomaa.read.
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  --days NUMBER    Look-ahead window (days) (default: 30)

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  ListEnvelope<{ tyomaaDateId, tyomaaId, tyomaaName, typeName, expirationDate, daysUntil, urgency }>

ERRORS (stderr, exit non-zero)
  401  Token expired          → ib auth refresh
  403  Permission denied      → check auth.page.tyomaa.read
  500  Backend error          → retry with --verbose

EXAMPLES
  ib worksite dates expiring --days 14
"
`;

exports[`Help snapshots — contract stability > help for ib worksite dates list matches snapshot 1`] = `
"USAGE
  ib worksite dates list [flags]

DESCRIPTION
  List a worksite's compliance/permit dates (read-only).
  Permissions: requires auth.page.tyomaa.read.
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  --tyomaaId NUMBER    Positional — tyomaaId

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  ListEnvelope<{ tyomaaDateId, typeId, typeName, date, expirationDate, daysUntil, status, quantity }>

ERRORS (stderr, exit non-zero)
  400  Bad tyomaaId           → use a positive integer
  401  Token expired          → ib auth refresh
  403  Permission denied      → check auth.page.tyomaa.read
  500  Backend error          → retry with --verbose

EXAMPLES
  ib worksite dates list 99
"
`;

exports[`Help snapshots — contract stability > help for ib worksite delete matches snapshot 1`] = `
"USAGE
  ib worksite delete [flags]

DESCRIPTION
  Delete a worksite (tyomaa). Requires --reason.
  Permissions: requires auth.page.tyomaa.edit.
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  --reason STRING    Audit-log reason (REQUIRED)

WRITE-SAFETY FLAGS
  --dry-run            Validate without persisting. Returns the would-be response.
  --idempotency-key K  Replay protection. Cached for 24h.
  --reason TEXT        Free-text justification. Stored in audit log.

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  { deleted: number }

ERRORS (stderr, exit non-zero)
  404  Worksite not found     → verify tyomaaId
  401  Token expired          → ib auth refresh
  403  Permission denied      → check auth.page.tyomaa.edit
  500  Backend error          → retry with --verbose

EXAMPLES
  ib worksite delete 99 --reason "lifecycle cleanup"
"
`;

exports[`Help snapshots — contract stability > help for ib worksite get matches snapshot 1`] = `
"USAGE
  ib worksite get [flags]

DESCRIPTION
  Get a single worksite (tyomaa) by id with flat address fields.
  Permissions: requires auth.page.tyomaa.read.
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  --tyomaaId NUMBER    Positional — tyomaaId to fetch

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  { tyomaaId, name, address, asiakasId, city, comment, coords:{lat,lng} }

ERRORS (stderr, exit non-zero)
  404  Worksite not found     → verify tyomaaId
  401  Token expired          → ib auth refresh
  403  Permission denied      → check auth.page.tyomaa.read
  500  Backend error          → retry with --verbose

EXAMPLES
  ib worksite get 99
"
`;

exports[`Help snapshots — contract stability > help for ib worksite helsinki-fetch matches snapshot 1`] = `
"USAGE
  ib worksite helsinki-fetch [flags]

DESCRIPTION
  Refresh Helsinki building data for a worksite (POST /api/tyomaa/helsinki/fetch/:id).
  Permissions: requires auth.page.tyomaa.edit.
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  --tyomaaId NUMBER    Positional — tyomaaId

WRITE-SAFETY FLAGS
  --dry-run            Validate without persisting. Returns the would-be response.
  --idempotency-key K  Replay protection. Cached for 24h.
  --reason TEXT        Free-text justification. Stored in audit log.

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  { success, ... } (raw backend response)

ERRORS (stderr, exit non-zero)
  400  Missing coordinates    → run refresh-location first
  401  Token expired          → ib auth refresh
  403  Permission denied      → check auth.page.tyomaa.edit
  500  Backend error          → retry with --verbose

EXAMPLES
  ib worksite helsinki-fetch 99
"
`;

exports[`Help snapshots — contract stability > help for ib worksite list matches snapshot 1`] = `
"USAGE
  ib worksite list [flags]

DESCRIPTION
  List worksites (tyomaat) visible to the active company. ownerAsiakasId derived from JWT.
  Permissions: requires auth.page.tyomaa.read.
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  --customer NUMBER    Filter by parent asiakasId
  --limit NUMBER    Max rows (capped at 500) (default: 100)
  --cursor STRING    Pagination cursor

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  ListEnvelope<{ tyomaaId, name, address, asiakasId, city }>

ERRORS (stderr, exit non-zero)
  401  Token expired          → ib auth refresh
  403  Permission denied      → check auth.page.tyomaa.read
  500  Backend error          → retry with --verbose

EXAMPLES
  ib worksite list
  ib worksite list --customer 1349
"
`;

exports[`Help snapshots — contract stability > help for ib worksite metrics matches snapshot 1`] = `
"USAGE
  ib worksite metrics [flags]

DESCRIPTION
  Volume / keikka-count metrics for a worksite (GET /api/cli/worksite/metrics/:tyomaaId).
  Permissions: requires auth.page.tyomaa.read.
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  --tyomaaId NUMBER    Positional — tyomaaId

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  { tyomaaId, summary:{...}, monthlyBreakdown:[...] }

ERRORS (stderr, exit non-zero)
  404  Worksite not found     → verify tyomaaId
  401  Token expired          → ib auth refresh
  403  Permission denied      → check auth.page.tyomaa.read
  500  Backend error          → retry with --verbose

EXAMPLES
  ib worksite metrics 99
"
`;

exports[`Help snapshots — contract stability > help for ib worksite person add matches snapshot 1`] = `
"USAGE
  ib worksite person add [flags]

DESCRIPTION
  Attach a person to a worksite (tyomaaPerson). Requires --reason.
  Permissions: requires auth.page.tyomaa.edit.
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  --worksite NUMBER    Target tyomaaId (REQUIRED)
  --person NUMBER    Target personId (REQUIRED)
  --contact-type NUMBER    contactPersonTypeId (default: 1)
  --reason STRING    Audit-log reason (REQUIRED)

WRITE-SAFETY FLAGS
  --dry-run            Validate without persisting. Returns the would-be response.
  --idempotency-key K  Replay protection. Cached for 24h.
  --reason TEXT        Free-text justification. Stored in audit log.

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  { added: { tyomaaId, personId } }

ERRORS (stderr, exit non-zero)
  401  Token expired          → ib auth refresh
  403  Permission denied      → check auth.page.tyomaa.edit
  500  Backend error          → retry with --verbose

EXAMPLES
  ib worksite person add --worksite 99 --person 5351 --reason "assign foreman"
"
`;

exports[`Help snapshots — contract stability > help for ib worksite person list matches snapshot 1`] = `
"USAGE
  ib worksite person list [flags]

DESCRIPTION
  List persons attached to a worksite.
  Permissions: requires auth.page.tyomaa.read.
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  (none)

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  ListEnvelope<{ personId, name, email, contactType }>

ERRORS (stderr, exit non-zero)
  401  Token expired          → ib auth refresh
  403  Permission denied      → check auth.page.tyomaa.read
  500  Backend error          → retry with --verbose

EXAMPLES
  ib worksite person list 99
"
`;

exports[`Help snapshots — contract stability > help for ib worksite person remove matches snapshot 1`] = `
"USAGE
  ib worksite person remove [flags]

DESCRIPTION
  Detach a person from a worksite. Requires --reason.
  Permissions: requires auth.page.tyomaa.edit.
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  --worksite NUMBER    Target tyomaaId (REQUIRED)
  --person NUMBER    Target personId (REQUIRED)
  --contact-type NUMBER    contactPersonTypeId (default: 1)
  --reason STRING    Audit-log reason (REQUIRED)

WRITE-SAFETY FLAGS
  --dry-run            Validate without persisting. Returns the would-be response.
  --idempotency-key K  Replay protection. Cached for 24h.
  --reason TEXT        Free-text justification. Stored in audit log.

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  { removed: { tyomaaId, personId } }

ERRORS (stderr, exit non-zero)
  404  Link not found         → verify tyomaaId+personId combination
  401  Token expired          → ib auth refresh
  403  Permission denied      → check auth.page.tyomaa.edit
  500  Backend error          → retry with --verbose

EXAMPLES
  ib worksite person remove --worksite 99 --person 5351 --reason "rotation"
"
`;

exports[`Help snapshots — contract stability > help for ib worksite refresh-location matches snapshot 1`] = `
"USAGE
  ib worksite refresh-location [flags]

DESCRIPTION
  Re-geocode a worksite from Google Maps (POST /api/tyomaa/refreshLocation/:id).
  Permissions: requires auth.page.tyomaa.edit.
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  --tyomaaId NUMBER    Positional — tyomaaId

WRITE-SAFETY FLAGS
  --dry-run            Validate without persisting. Returns the would-be response.
  --idempotency-key K  Replay protection. Cached for 24h.
  --reason TEXT        Free-text justification. Stored in audit log.

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  { success: true, tyomaa, message } (raw backend response)

ERRORS (stderr, exit non-zero)
  404  Worksite not found     → verify tyomaaId
  401  Token expired          → ib auth refresh
  403  Permission denied      → check auth.page.tyomaa.edit
  500  Backend error          → retry with --verbose

EXAMPLES
  ib worksite refresh-location 99 --reason "address corrected"
"
`;

exports[`Help snapshots — contract stability > help for ib worksite search matches snapshot 1`] = `
"USAGE
  ib worksite search [flags]

DESCRIPTION
  Free-text search across worksite names / addresses. POST /api/tyomaa/search.
  Permissions: requires auth.page.tyomaa.read.
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  --query STRING    Positional — search string
  --limit NUMBER    Max results (default: 50)

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  ListEnvelope<{ tyomaaId, name, address, asiakasId, score }>

ERRORS (stderr, exit non-zero)
  401  Token expired          → ib auth refresh
  403  Permission denied      → check auth.page.tyomaa.read
  500  Backend error          → retry with --verbose

EXAMPLES
  ib worksite search 'Main St'
"
`;

exports[`Help snapshots — contract stability > help for ib worksite set-geofence matches snapshot 1`] = `
"USAGE
  ib worksite set-geofence [flags]

DESCRIPTION
  Set a worksite geofence radius in metres (1-10000).
  Permissions: requires auth.page.tyomaa.edit.
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  --tyomaaId NUMBER    Positional — tyomaaId
  --radius NUMBER    Geofence radius in metres (1-10000)

WRITE-SAFETY FLAGS
  --dry-run            Validate without persisting. Returns the would-be response.
  --idempotency-key K  Replay protection. Cached for 24h.
  --reason TEXT        Free-text justification. Stored in audit log.

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  { success: true }

ERRORS (stderr, exit non-zero)
  400  Radius out of range    → use 1-10000
  401  Token expired          → ib auth refresh
  403  Permission denied      → check auth.page.tyomaa.edit
  500  Backend error          → retry with --verbose

EXAMPLES
  ib worksite set-geofence 99 --radius 300
"
`;

exports[`Help snapshots — contract stability > help for ib worksite update matches snapshot 1`] = `
"USAGE
  ib worksite update [flags]

DESCRIPTION
  Update a worksite via POST /api/tyomaa/set/:ownerAsiakasId/:tyomaaId/:yyyymmdd.
  Permissions: requires auth.page.tyomaa.edit.
  Timezone: dates interpreted in active company timezone (Europe/Helsinki).

FLAGS
  --tyomaaId NUMBER    Positional — tyomaaId to update
  --body JSON    JSON object with the fields to update
  --date DATE    Effective date (YYYYMMDD; today by default) (default: today)

WRITE-SAFETY FLAGS
  --dry-run            Validate without persisting. Returns the would-be response.
  --idempotency-key K  Replay protection. Cached for 24h.
  --reason TEXT        Free-text justification. Stored in audit log.

GLOBAL FLAGS
  --endpoint URL  --request-id ID  --quiet  --verbose  --pretty  --json

OUTPUT (JSON, stdout)
  { ok: true, ... } (raw backend response)

ERRORS (stderr, exit non-zero)
  400  Validation failed      → fix --body fields
  404  Worksite not found     → verify tyomaaId
  401  Token expired          → ib auth refresh
  403  Permission denied      → check auth.page.tyomaa.edit
  500  Backend error          → retry with --verbose

EXAMPLES
  ib worksite update 99 --body '{"comment":"Pickup at gate B"}'
"
`;
